--- a/assets/css/partials/_timeline.scss
+++ b/assets/css/partials/_timeline.scss
@@ -58,6 +58,7 @@
       li{
         padding: 10px;
         text-transform: capitalize;
+        color: white;
       }
     }
   }
